implement phone number, change user layer to profile calling
