# internal/models/inputs.go
@@ -1,0 +1,12 @@
+package models
+
+type SignUpPayload struct {
+	Login    string `json:"login" validate:"required,min=6,max=30"`
+	Phone    string `json:"phone" validate:"required,e164"`
+	Password string `json:"password" validate:"required,min=8,max=32"`
+}
+
+type SignInPayload struct {
+	Login    string `json:"login" validate:"required,min=6,max=30"`
+	Password string `json:"password" validate:"required,min=8,max=32"`
+}
