# internal/models/profile.go
@@ -6,21 +6,12 @@ import (
 	"github.com/google/uuid"
 )
 
-type User struct {
-	Login    string `json:"login"`
-	Password string `json:"password"`
-}
-
-func (u *User) IsValid() bool {
-	// strings.Contains()
-	return len(u.Login) >= 6 && len(u.Login) <= 30
-}
-
 type Profile struct {
 	Id           uuid.UUID `json:"id"` //nolint:stylecheck
 	Login        string    `json:"login"`
 	Description  string    `json:"description,omitempty"`
 	ImgSrc       string    `json:"img"`
+	Phone        string    `json:"phone"`
 	PasswordHash []byte    `json:"password"`
 }
 
@@ -35,13 +26,11 @@ type UserInfo struct {
 }
 
 type ProfileInfo struct {
-	User
+	SignUpPayload
 	UserInfo
 }
 
 func (p *Profile) LogValue() slog.Value {
-	//nolint:lll
-	// check https://betterstack.com/community/guides/logging/logging-in-go/#hiding-sensitive-fields-with-the-logvaluer-interface
 	return slog.GroupValue(
 		slog.String("id", p.Id.String()),
 		slog.String("login", p.Login),
